sidebar hide/show problem fixed on firefox with margin-left

--- a/app/assets/sass/style.scss
+++ b/app/assets/sass/style.scss
@@ -55,7 +55,7 @@ html {
     // display: table;
   }
   &.blockView {
-    overflow: hidden;
+    // overflow: hidden;
   }
 }
 
