--- a/app/layouts/_login.scss
+++ b/app/layouts/_login.scss
@@ -9,7 +9,7 @@
       position: relative;
       z-index: 1;
       display: flex;
-      flex-flow: column nowrap;
+      flex-flow: row wrap;
       justify-content: space-around;
       align-items: center;
       .myImg {
